golang-golang-x-sys (0.0~git20161017.0.002cbb5-1) UNRELEASED; urgency=medium

  * New upstream release. Closes: #840423.

 -- Martín Ferrari <tincho@debian.org>  Thu, 20 Oct 2016 20:54:22 +0200

golang-golang-x-sys (0.0~git20161012.0.9bb9f09-1) unstable; urgency=medium

  * New upstream version.

 -- Anthony Fok <foka@debian.org>  Sun, 16 Oct 2016 05:17:34 -0600

golang-golang-x-sys (0.0~git20160704.0.a408501-1) unstable; urgency=medium

  * New upstream release. Closes: #828089.
  * debian/control:
    - Depend on recent dh-golang.
    - Remove unneeded Built-Using field.
  * debian/rules: use new dh-golang features to simplify rules.

 -- Martín Ferrari <tincho@debian.org>  Mon, 04 Jul 2016 17:28:03 +0000

golang-golang-x-sys (0.0~git20160611.0.7f918dd-1) unstable; urgency=medium

  * New upstream import
  * Change golang-go to golang-any in Build-Depends and Depends
    so gccgo may be used where golang-go is unavailable.

 -- Anthony Fok <foka@debian.org>  Sun, 12 Jun 2016 08:36:33 -0600

golang-golang-x-sys (0.0~git20160517.0.d4feaf1-1) unstable; urgency=medium

  [ Martín Ferrari ]
  * Depend and build-depend on golang 1.4, as it fails to build with older
    versions.
  * Require dh-golang 1.10, for XS-Go-Import-Path.
  * Don't fail if a file to clean is not present.

  [ Michael Hudson-Doyle ]
  * New upstream import.

 -- Martín Ferrari <tincho@debian.org>  Thu, 19 May 2016 02:23:19 +0000

golang-golang-x-sys (0.0~git20160421.0.b776ec3-1) unstable; urgency=medium

  * New upstream import, which fixes issues with inotify in ppc64*.
  * Add myself to Uploaders.
  * Clean more unneeded files from package.

 -- Martín Ferrari <tincho@debian.org>  Sat, 30 Apr 2016 21:04:40 +0000

golang-golang-x-sys (0.0~git20160415.0.f64b50f-1) unstable; urgency=medium

  * Update debian/control
    - Bump Standards-Version to 3.9.8
    - Use https URLs for Vcs-Browser and Vcs-Git
    - Add XS-Go-Import-Path field
    - Remove dependency on golang-go