@@ -1,8 +1,8 @@
 #!/usr/bin/make -f
 
-# So that .s files (assembler) are installed.
-export DH_GOLANG_INSTALL_EXTRA := plan9/*.s unix/*.s windows/*.s \
-    windows/svc/*.s
+# Do not include plan9 and windows packages that are not relevant to Debian. In
+# particular, the plan9 package makes build fail when using gccgo.
+export DH_GOLANG_EXCLUDES := plan9 windows
 
 %:
 	dh $@ --buildsystem=golang --with=golang
